# LetsGoal

./: main.py  pyproject.toml  readme.md  reminders.txt  storage.db
static/: style13.css
templates/: about.html  base.html  browse.html  index.html  login.html  message.html  new.html  notifpage.html  post.html  signup.html  sitemap.html  thread.html  user.html
