[tool.poetry]
name = "ideasite"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
wtforms = "^2.3.3"
flask = "^1.1.2"
flask-login = "^0.5.0"
flask-sqlalchemy = "^2.5.1"
flask-wtf = "^0.14.3"
gevent = "^21.1.2"
werkzeug = "^1.0.1"
email-validator = "^1.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
